@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Remove SHM Optimization
+
 1.302160  2019-01-18 11:44:33-08:00 America/Los_Angeles
 
     - No Changes since last trial release
